# 00SWIFT

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  start.bat
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: apply-modernization.yml  apply-production-hardening.yml  batch2-autofix.yml  batch3-autofix.yml  ci.yml  codeql.yml  dependency-audit.yml  format-diff.yml  migrations.yml  nextgen-autofix.yml  nextgen-xml-security-fix.yml  publish.yml  release-validation-bootstrap.yml  release.yml  v3-format-once.yml
.modernization/: payload.part-00  payload.part-01  payload.part-02  payload.part-03  payload.part-04  payload.part-05  payload.part-06  payload.part-07  payload.part-08  payload.part-09  payload.part-10  payload.part-12  trigger
.release/: v2.1.0  v3.0.0  v3.0.0.published  v3.0.0.validated  v4.0.0  v4.0.0.published  v4.0.0.validated
backend/: .env.example  config.py  database.py  main.py  requirements-dev.txt  requirements.txt  version.py
backend/admin/: __init__.py  credentials.py  dev_sign.py  payments.py  (+1 more)
docs/: API.md  ARCHITECTURE.md  BATCH2_LIFECYCLE.md  DESIGN.md  FRONTEND_V4_DESIGN_BRIEF.md  FRONTEND_V4_IMPLEMENTATION_MATRIX.md  NEXTGEN.md  OPERATIONS.md  RELEASE.md  THREAT_MODEL.md  V3_IMPLEMENTATION_MATRIX.md
frontend/: app.js  index.html  package.json  style.css  vite.config.ts
(+101 files in other folders)
