[project]
name = "00swift"
version = "2.1.0"
description = "Contract-aligned SWIFT and e-CNY cross-border payment sandbox"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "SealWax" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial",
  "Topic :: Security",
]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
addopts = "-ra --strict-config --strict-markers"

[tool.coverage.run]
branch = false
source = ["backend"]
omit = ["backend/tests/*"]

[tool.coverage.report]
fail_under = 68
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend"]
exclude = ["backend/data"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "PERF"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["S101"]
"backend/tests/conftest.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.bandit]
exclude_dirs = ["backend/tests"]
skips = ["B101", "B105", "B106"]
